--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://webexcc-sa.github.io/partner-summit/'
+url:              'https://webexcc-sa.github.io/partner-summit'
 baseurl:          ''
 
 rss:              RSS
