updating baseurl and url  in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://webexcc-sa.github.io/partner-summit'
-baseurl:          ''
+url:              'https://webexcc-sa.github.io'
+baseurl:          '/partner-summit'
 
 rss:              RSS
 
